--- a/backend/LeituraLivre.API/appsettings.json
+++ b/backend/LeituraLivre.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=leitura_livre;Username=leitura;Password=admin"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
